test/spec_vectors/type-subtyping/fail/module_60.wat
(module (type $f0 (sub (func (param i32) (result i32)))) (type $s0 (sub $f0 (struct))))